--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,16 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% block body %}
+            <header>
+                <h1>Bienvenue sur GameLib</h1>
+                <nav>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Créer un compte</a></li>
+                        <li><a href="#">Se connecter</a></li>
+                    </ul>
+            </header> 
+        {% endblock %}
     </body>
 </html>
